@@ -30,18 +30,14 @@ Before starting, ensure you have the following installed:
 - **GC Analysis:** Uploads GC logs to GCEasy for detailed analysis.
 - **Artifact Management:** Saves test results, GC logs, and analysis for further review.
 
-## Required Secrets
-- `GHCR_PAT`: Personal Access Token for GitHub Container Registry. You can generate it from [GitHub's documentation on creating a Personal Access Token](https://docs.github.com/en/github/authenticating-to-github/creating-a-personal-access-token).
-- `GCEASY_API_KEY`: API key for accessing GCEasy. You can obtain the key by signing up on [GCEasy.io](https://gceasy.io) and requesting the API key.
-
 ## How to Use
 
-1. **Clone the Repository:**
+#### 1. **Clone the Repository:**
    ```bash
     git clone https://github.com/yogeshwar-vhatkar-bnt/yogeshwar-trivy-demo-main
    ```
    
-    #### 1.2 Directory Structure
+    ##### 1.2 Directory Structure
     ```bash
     .
     ├── tests                # Directory containing k6 test scripts
@@ -52,27 +48,44 @@ Before starting, ensure you have the following installed:
     └── .github/workflows    # Directory containing GitHub Actions workflows
     ```
     
-    #### 1.3 Build the Project Using Gradle
+    ##### 1.3 Build the Project Using Gradle
     ``` bash
     ./gradlew clean build
     ```
 
-2. **Configure Secrets:**
+#### 2. **Configure Secrets:**
    Add the required secrets (`GHCR_PAT` and `GCEASY_API_KEY`) to the repository settings.
 
-3. **Run Workflow:**
-   Push changes to the repository or create a pull request to trigger the workflow.
+   ##### 2.1 How to achieve this secrets 
+            - `GHCR_PAT`: Personal Access Token for GitHub Container Registry. You can generate it from [GitHub's documentation on creating a Personal Access Token]                                      (https://docs.github.com/en/github/authenticating-to-github/creating-a-personal-access-token).
+            
+            - `GCEASY_API_KEY`: API key for accessing GCEasy. You can obtain the key by signing up on [GCEasy.io](https://gceasy.io) and requesting the API key.
 
-4. **View Results:**
-   - Test results and GC analysis will be available as workflow artifacts in the following formats:
-     - For **G1GC**, the results will be saved in a zip folder named `g1gc-results`.
-     - For **ZGC**, the results will be saved in a zip folder named `gzgc-results`.
-   - The artifacts will include:
-     - **GC Logs** (e.g., `gzgc-gc.log`)
-     - **GC Analysis Reports** (e.g., `gzgc-gc-analysis_report.txt`)
-     - **Test Results** (e.g., `gzgc-test-results.json`)
-     - **Performance Metrics**
-   - These zip folders can be downloaded from the workflow run page.
+#### 3. **Run Workflow:**
+
+   ##### 3.1 The location of this can be found in
+            - Please refer to section 1.2 in the README for the directory structure.
+               
+   ##### 3.2 What triggers the workflow       
+            - **Push to the** ```main``` **branch**: Whenever code is pushed to the main branch, the workflow will automatically run.
+
+            - **Pull Request to the** ```main``` **branch**: If a pull request is created or updated for the main branch, the workflow will also be triggered automatically.
+
+#### 4. **View Results:**
+
+   ##### 4.1 You can find it in the following location
+         - Test results and GC analysis will be available as workflow artifacts in the following formats:
+           - For **G1GC**, the results will be saved in a zip folder named `g1gc-results`.
+           - For **ZGC**, the results will be saved in a zip folder named `gzgc-results`.
+           
+         - The artifacts will include:
+           - **GC Logs** (e.g., `gzgc-gc.log`)
+           - **GC Analysis Reports** (e.g., `gzgc-gc-analysis_report.txt`)
+           - **Test Results** (e.g., `gzgc-test-results.json`)
+           - **Performance Metrics**
+           
+         - These zip folders can be downloaded from the workflow run page.
+         
 
 ## Workflow Overview
 
@@ -85,7 +98,21 @@ Before starting, ensure you have the following installed:
   - `-XX:G1HeapRegionSize=1m`: Configures the size of G1GC heap regions to 1 MB.
   - `-XX:+UseStringDeduplication`: Enables string deduplication in G1GC.
   - `-Xlog:gc*:file=gc.log:time,uptime,level,tags`: Logs GC events to `gc.log` with detailed timestamps, uptime, log level, and tags.
+- **Here Dockerfile for g1gc**
+     ```bash
+      FROM mcr.microsoft.com/openjdk/jdk:21-ubuntu
 
+      LABEL authors="yogeshwar.vhatkar"
+
+      WORKDIR /app
+
+      COPY build/libs/trivydemo-0.0.1-SNAPSHOT.jar trivy-demo-g1gc.jar
+
+      EXPOSE 8080
+
+      ENTRYPOINT ["java", "-Xms2G", "-Xmx2G", "-XX:MaxMetaspaceSize=1G", "-XX:+UseG1GC", "-XX:MaxGCPauseMillis=200", "-XX:G1HeapRegionSize=1m", "-XX:+UseStringDeduplication", "-               verbose:gc", "-Xlog:gc*:file=gc.log:time,uptime,level,tags", "-jar", "trivy-demo-g1gc.jar"]
+     ```
+   
 ### Workflow for ZGC
 - **Dockerfile:** `Dockerfile-zgc`
 - **Garbage Collector:** ZGC
@@ -95,6 +122,20 @@ Before starting, ensure you have the following installed:
   - `-XX:MaxGCPauseMillis=200`: Sets the maximum pause time goal for ZGC to 200 milliseconds.
   - `-XX:+UseStringDeduplication`: Enables string deduplication in ZGC.
   - `-Xlog:gc*:file=gc.log:time,uptime,level,tags`: Logs GC events to `gc.log` with detailed timestamps, uptime, log level, and tags.
+- **Here Dockerfile for gzgc**
+     ```bash
+      FROM mcr.microsoft.com/openjdk/jdk:21-ubuntu
+
+      LABEL authors="yogeshwar.vhatkar"
+
+      WORKDIR /app
+
+      COPY build/libs/trivydemo-0.0.1-SNAPSHOT.jar trivy-demo-gzgc.jar
+
+      EXPOSE 8080
+
+      ENTRYPOINT ["java", "-Xms2G", "-Xmx2G", "-XX:MaxMetaspaceSize=1G", "-XX:+UseZGC", "-XX:+ZGenerational", "-XX:MaxGCPauseMillis=200", "-XX:+UseStringDeduplication", "-verbose:gc",          "-Xlog:gc*:file=gc.log:time,uptime,level,tags", "-jar", "trivy-demo-gzgc.jar"]
+     ```
 
 ## Steps in Both Workflows
 The workflows are triggered on `push` and `pull_request` events. They perform the following steps:
@@ -121,8 +162,6 @@ The workflows are triggered on `push` and `pull_request` events. They perform th
    - These metrics are crucial for understanding the performance of the garbage collector and the application’s memory management.
 12. **Upload artifacts:** Saves test results, GC logs, and analysis reports as workflow artifacts.
 13. **Stop and clean up containers:** Stops the running container and removes unused Docker resources.
-
-
 
 
 ## Troubleshooting
